# EEG_robotics

./: README.md
model/: DDPM_chns_reconst.ipynb  EEG_TCFormer.ipynb  EEG_preprocessing.ipynb  extract_trial_series.ipynb  tcformer_module.py
ros2_src/bci_interface/: package.xml  setup.cfg  setup.py
ros2_src/bci_interface/bci_interface/: bci_node.py  tcformer_module.py
ros2_src/bci_interface/config/: bci.yaml  selected_timeseries_with_labels.pt  tcformer_state_dict.pth
ros2_src/bci_interface/launch/: bci.launch.py
ros2_src/env_filter/: package.xml  setup.cfg  setup.py
ros2_src/env_filter/config/: env_filter.yaml
ros2_src/env_filter/env_filter/: env_filter.py
ros2_src/env_filter/launch/: env_filter.launch.py
ros2_src/robot_bringup/: package.xml  setup.py
ros2_src/robot_bringup/launch/: bci_safe_sim.launch.py
ros2_src/robot_description/: package.xml  setup.py
ros2_src/robot_description/launch/: display.launch.py
ros2_src/robot_description/mesh/: Chair.CATPart  Chair.stl  LiDAR.CATPart  LiDAR.stl  Product1.CATProduct  Wheel.CATPart  Wheel.stl  caster_wheel.CATPart  caster_wheel.stl  caster_wheel_bracket.CATPart  caster_wheel_bracket.stl
ros2_src/robot_description/rviz/: config.rviz
ros2_src/robot_description/urdf/: gazebo_control.xacro  inertia_utils.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
ros2_src/robot_gazebo/: package.xml  setup.py
ros2_src/robot_gazebo/launch/: launch_sim.launch.xml
ros2_src/robot_gazebo/params/: robot_bridge.yaml
ros2_src/robot_gazebo/worlds/: bci_seq_s_course.sdf  empty_ground.sdf
